--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap");
 
+body,
+html {
+  font-family: "Comic Neue", sans-serif;
+}
 .comics-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -10,19 +14,24 @@
   max-width: 300px;
   justify-content: space-between;
   padding: 1rem;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 0.2rem;
   margin: 1rem;
   cursor: pointer;
-  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 
   &:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  }
+
+  &.selected {
+    background-color: #e62429;
+    color: #fff;
   }
 
   .comic-title {
     margin: 1rem 0;
-    font-family: 'Comic Neue', sans-serif;
+    font-family: "Comic Neue", sans-serif;
     font-size: 1.5rem;
     text-align: center;
   }
@@ -37,4 +46,38 @@
   font-size: 1.6rem;
   width: 400px;
   margin: 1rem auto;
+}
+
+.footer {
+  position: fixed;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  bottom: 0;
+  left: 0;
+  height: 3rem;
+  width: calc(100vw - 3rem);
+  padding: 1rem;
+  background-color: #b61f24;
+  color: #fff;
+  font-family: "Comic Neue", sans-serif;
+  font-size: 1.2rem;
+
+  span {
+    margin: 0 1rem;
+  }
+}
+
+button {
+  border: 2px solid #fff;
+  color: #fff;
+  text-transform: uppercase;
+  background-color: transparent;
+  padding: 0.5rem 1rem;
+  margin: 0 0 0 0.5rem;
+
+  &:hover {
+    border-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.18);
+  }
 }
