--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap");
 
+$marvelBrandColor: #e62429;
 body,
 html {
   font-family: "Comic Neue", sans-serif;
+  background-color: #f1f3f4;
+}
+
+body {
+  padding-bottom: 4rem;
 }
 .comics-wrapper {
   display: flex;
@@ -14,6 +20,7 @@ html {
   max-width: 300px;
   justify-content: space-between;
   padding: 1rem;
+  background-color: #fff;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   border-radius: 0.2rem;
   margin: 1rem;
@@ -25,7 +32,7 @@ html {
   }
 
   &.selected {
-    background-color: #e62429;
+    background-color: $marvelBrandColor;
     color: #fff;
   }
 
@@ -43,9 +50,21 @@ html {
 }
 
 .search-box {
-  font-size: 1.6rem;
-  width: 400px;
+  font-size: 1.4rem;
+  width: 33%;
+  text-align: center;
   margin: 1rem auto;
+  padding: 0.5rem 1rem;
+  border: 1px solid #202020;
+  
+  &:focus {
+    outline: none;
+    border-color: $marvelBrandColor;
+  }
+
+  &::placeholder {
+    font-family: "Comic Neue", sans-serif;
+  }
 }
 
 .footer {
@@ -75,6 +94,7 @@ button {
   background-color: transparent;
   padding: 0.5rem 1rem;
   margin: 0 0 0 0.5rem;
+  cursor: pointer;
 
   &:hover {
     border-color: rgba(255, 255, 255, 0.5);
