--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -61,6 +61,7 @@ $size: 20px;
     height: 100%;
     z-index: 1060;
     pointer-events: fill;
+    background-color: rgba(255, 255, 255, .5);
 }
 
 @keyframes growBefore {
