altera arquivo readme

--- a/src/App.scss
+++ b/src/App.scss
@@ -39,6 +39,11 @@ input {
   }
 }
 
+.container {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
 
 .loader-inline {
   width: calc(100% - 2rem);
