--- a/src/components/SearchInput/styles.scss
+++ b/src/components/SearchInput/styles.scss
@@ -6,7 +6,7 @@ $marvelBrandColor: #e62429;
 
 .search-box {
     font-size: 1.4rem;
-    width: 33%;
+    min-width: 400px;
     text-align: center;
     margin: 1rem auto;
     padding: 0.5rem 1rem;
