--- a/src/components/Comics/styles.scss
+++ b/src/components/Comics/styles.scss
@@ -3,6 +3,8 @@ $marvelBrandColor: #e62429;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 .comic {
     display: flex;
