--- a/src/components/EmailForm/styles.scss
+++ b/src/components/EmailForm/styles.scss
@@ -15,7 +15,7 @@
         flex-flow: column;
         background-color: #fff;
         width: 30rem;
-        height: 200px;
+        height: 208px;
         padding: 1rem;
         overflow-y: auto;
         border-radius: 0.2rem;
@@ -38,10 +38,7 @@
                 border: 2px solid #202020;
                 color: #222;
                 padding: 0.5rem 1rem;
-
-                &:focus {
-                    outline: #b61f24 auto 2px;
-                }
+                font-size: 1.2rem;
             }
         }
 
@@ -60,7 +57,6 @@
 
         &:hover {
             background-color: #b61f24;
-            border-color: #b61f24;
             color: #fff;
         }
     }
