--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -51,7 +51,7 @@ $size: 20px;
 }
 
 .spinner-grow-backdrop {
-    position: absolute;
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
