--- a/src/components/Loader/styles.scss
+++ b/src/components/Loader/styles.scss
@@ -1,4 +1,3 @@
-
 $marvelBrandColor: #e62429;
 $bLeft: 99952px;
 $left: 99973px;
@@ -57,11 +56,14 @@ $size: 20px;
     align-items: center;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 1060;
     pointer-events: fill;
-    background-color: rgba(255, 255, 255, .5);
+
+    &.backdrop-color {
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 }
 
 @keyframes growBefore {
